# aiovantage

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  pre-commit.yml  publish-to-test-pypi.yml  publish.yml  release.yml  test.yml
aiovantage/: __init__.py  aci_client.py  controllers.py  hc_client.py  models.py  query.py  xml_dataclass.py
aiovantage/aci_client/: __init__.py
aiovantage/aci_client/interfaces/: configuration.py  introspection.py  login.py
aiovantage/clients/: aci copy.py  aci.py  hc.py
aiovantage/clients/aci/: client.py  configuration.py  introspection.py  login.py
aiovantage/controllers/: areas.py  base.py  buttons.py  dry_contacts.py  loads.py  omni_sensors.py  stations.py  tasks.py  variables.py
aiovantage/models/: area.py  base.py  button.py  dry_contact.py  load.py  location_object.py  omni_sensor.py  station.py  system_object.py  task.py  utils.py  vantage_object.py  variable.py  xml_model.py
contributing/: index.html
docs/: aci_service.md  hc_service.md  index.md  license.md
examples/: aci_client.py  control_load.py  dump_areas.py  dump_blind_groups.py  dump_blinds.py  dump_buttons.py  dump_dry_contacts.py  dump_gmem.py  dump_load_groups.py  dump_loads.py  dump_omni_sensors.py  dump_on_loads.py  dump_rgb_loads.py  dump_stations.py  dump_system.py  dump_tasks.py  hc_client.py  monitor_all.py  monitor_blinds.py  monitor_buttons.py  monitor_dry_contacts.py  monitor_gmem.py  monitor_loads.py  monitor_omni_sensors.py  monitor_rgb_loads.py  poll_on_loads.py  run_task.py  set_gmem.py  toggle_load.py
examples/aci_client/: aci_client.py
examples/anemo_sensors/: dump_anemo_sensors.py  monitor_anemo_sensors.py
examples/areas/: dump_areas.py
examples/blind_groups/: dump_blind_groups.py
examples/blinds/: dump_blinds.py  monitor_blinds.py
examples/buttons/: dump_buttons.py  monitor_buttons.py
examples/command_client/: event_log.py  status_load.py
examples/config_client/: dump_objects.py  get_version.py
examples/debug_logging/: __init__.py
examples/dry_contacts/: dump_dry_contacts.py  monitor_dry_contacts.py
examples/gmem/: dump_gmem.py  monitor_gmem.py  set_gmem.py
examples/hc_client/: event_log.py  status_all.py  status_load.py
examples/light_sensors/: dump_light_sensors.py  monitor_light_sensors.py
examples/load_groups/: dump_load_groups.py  monitor_load_groups.py
examples/loads/: control_load.py  dump_loads.py  monitor_loads.py  poll_on_loads.py  toggle_load.py
examples/masters/: dump_masters.py  monitor_masters.py
examples/omni_sensors/: dump_omni_sensors.py  monitor_omni_sensors.py
examples/port_devices/: dump_port_devices.py
examples/power_profiles/: dump_power_profiles.py
examples/rgb_loads/: dump_rgb_loads.py  monitor_rgb_loads.py
examples/stations/: dump_stations.py  jingle_bells.py
examples/tasks/: dump_tasks.py  run_task.py
examples/temperature_sensors/: dump_temperature_sensors.py  monitor_temperature_sensors.py
examples/temperatures/: dump_temperature_sensors.py  dump_temperatures.py  monitor_temperature_sensors.py  monitor_temperatures.py
examples/thermostats/: dump_thermostats.py  monitor_thermostats.py
license/: index.html
reference/aiovantage/: index.html
reference/aiovantage/command_client/: index.html
reference/aiovantage/config_client/: index.html
reference/aiovantage/controllers/: index.html
reference/aiovantage/discovery/: index.html
reference/aiovantage/errors/: index.html
reference/aiovantage/events/: index.html
reference/aiovantage/object_interfaces/: index.html
reference/aiovantage/objects/: index.html
scripts/: dump_vantage_interfaces.py  dump_vantage_schemas.py  dump_vantage_types.py  format.sh  lint.sh
search/: search_index.json
src/aiovantage/: __about__.py  __init__.py  _connection.py  _logger.py  command_client.py  config_client.py  connection.py  controllers.py  discovery.py  errors.py  events.py  logger.py  models.py  object_interfaces.py  objects.py  query.py
src/aiovantage/_command_client/: README.md  client.py  connection.py  converter.py  events.py
src/aiovantage/_config_client/: README.md  client.py  connection.py
src/aiovantage/_controllers/: anemo_sensors.py  areas.py  back_box.py  back_boxes.py  base.py  blind_groups.py  blinds.py  buttons.py  dry_contacts.py  events.py  gmem.py  light_sensors.py  load_groups.py  loads.py  masters.py  modules.py  omni_sensors.py  port_devices.py  power_profiles.py  query.py  rgb_loads.py  stations.py  tasks.py  temperature_sensors.py  temperatures.py  thermostats.py
src/aiovantage/_object_interfaces/: anemo_sensor.py  base.py  blind.py  button.py  color_temperature.py  configuration.py  current_sensor.py  fan.py  gmem.py  introspection.py  light_sensor.py  load.py  object.py  power_sensor.py  rgb_load.py  sensor.py  sounder.py  task.py  temperature.py  thermostat.py
src/aiovantage/_objects/: area.py  blind_group.py  button.py  dimmer.py  din_station.py  dry_contact.py  dual_relay_station.py  eq_ctrl.py  eq_ux.py  gmem.py  irx2.py  load_group.py  location_object.py  module.py  module_gen2.py  omni_sensor.py  power_profile.py  pwm_power_profile.py  somfy_rs_485_sdn_20.py  station_object.py  temperature.py  thermostat.py  types.py  vantage_ddg_color_load.py  vantage_dg_color_load.py  vantage_dmx_dali_gateway.py  vantage_dmx_gateway.py  vantage_generic_hvac_rs485.py  vantage_hvac_iu.py  vantage_virtual_thermostat.py
src/aiovantage/aci_client/: README.md  __init__.py  helpers.py  xml_dataclass.py
src/aiovantage/command_client/: README.md  __init__.py  _client.py  _converter.py  _events.py  (+11 more)
testing/: dummy_aci_server.py  dummy_hc_server.py  mock_aci_server.py  mock_hc_server.py  test_hc_client.py
tests/: common.py  mock_aci_server.py  mock_hc_server.py
tests/fixtures/: objects.json
(+512 files in other folders)
