[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiovantage"
version = "0.22.4"
description = "Interact with and control Vantage InFusion home automation controllers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "James Smith", email = "james@loopj.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation",
]
dependencies = ["xsdata==24.12", "typing_extensions>=4.6.3,<5.0"]

[project.urls]
Documentation = "https://github.com/loopj/aiovantage#readme"
Issues = "https://github.com/loopj/aiovantage/issues"
Source = "https://github.com/loopj/aiovantage"

[project.optional-dependencies]
dev = ["pyright==1.1.396", "ruff==0.11.2", "bumpver==2024.1130"]

docs = [
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.10",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.11",
    "mkdocs-api-autonav==0.2.1",
]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "C90", # mccabe
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/aiovantage/objects/**/*.py" = [
    "D106", # Missing docstring in public nested class
]

[tool.ruff.lint.isort]
known-first-party = ["aiovantage"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "strict"

[tool.bumpver]
current_version = "0.22.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
